now we have our own compiler driver, needs to update the build system as well

--- a/jscomp/Makefile.shared
+++ b/jscomp/Makefile.shared
@@ -4,6 +4,6 @@ CAMLLEX=ocamllex.opt
 CAMLOPT=ocamlopt.opt
 
 
-.SUFFIXES: .mli .ml .cmi .cmo .cmx .p.cmx
+.SUFFIXES: .mli .ml .cmi .cmo .cmx .p.cmx .cmj
 
 print-%  : ; @echo $* = $($*)
