--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "babel-cli": "^6.3.17",
     "benchmark": "^2.1.0",
     "istanbul": "^0.4.2",
+    "google-closure-compiler": "^20160208.5.0",
     "karma": "^0.13.9",
     "karma-jasmine-html-reporter": "^0.1.8",
     "lodash": "^3.10.1",
