refactoring: share js between runtime and lib, centralize all externals used in runtime

--- a/jscomp/test/Makefile
+++ b/jscomp/test/Makefile
@@ -2,7 +2,7 @@ include ../Makefile.shared
 
 CAMLC=../bin/bsc
 
-INCLUDES= -I ../stdlib -I ../runtime -I ../lib 
+INCLUDES= -I ../stdlib  -I ../lib -I ../runtime
 
 SOURCE_LIST := $(shell cat test.mllib)
 TESTS := $(addsuffix .cmj, $(SOURCE_LIST) )
