--- a/jscomp/lib/Makefile
+++ b/jscomp/lib/Makefile
@@ -7,6 +7,7 @@ SOURCE_LIST := $(shell cat lib.mllib)
 RUNTIME := $(addsuffix .cmj, $(SOURCE_LIST))
 
 INCLUDES := -I ../runtime
+# COMPFLAGS := -js-module amdjs
 # COMPFLAGS += -js-module goog:buckle.js
 
 $(RUNTIME): $(CAMLC)
