--- a/jscomp/stdlib/Makefile.shared
+++ b/jscomp/stdlib/Makefile.shared
@@ -23,6 +23,8 @@ CAMLC=$(CAMLRUN) $(COMPILER)
 #          -safe-string
 COMPFLAGS=-strict-sequence -w +33..39 -g -warn-error A  -nostdlib \
           -safe-string 
+
+# COMPFLAGS += -js-module amdjs
 # COMPFLAGS+= -js-module goog:buckle.std
 
 # OPTCOMPILER=ocamlopt.opt
