--- a/package.json
+++ b/package.json
@@ -3,21 +3,21 @@
     "babel": "^6.3.13",
     "babel-cli": "^6.3.17",
     "benchmark": "^2.1.0",
+    "coveralls": "^2.11.9",
     "istanbul": "^0.4.2",
     "karma": "^0.13.9",
     "karma-jasmine-html-reporter": "^0.1.8",
     "mocha": "^2.3.4",
+    "mocha-lcov-reporter": "^1.2.0",
     "should": "^7.0.4",
     "should-equal": "^0.5.0",
     "uglify-js": "^2.6.1"
   },
   "scripts": {
-      "test": 
-      "node ./node_modules/mocha/bin/mocha './jscomp/test/**/*_test.js' ",
-      "wtest": 
-      "node ./node_modules/mocha/bin/mocha './jscomp/test/**/*_test.js'  -R spec -w",
-      "cover" : 
-      "node ./node_modules/istanbul/lib/cli.js cover --report html ./node_modules/.bin/_mocha --   jscomp/test/*test.js"
-
+    "test": "node ./node_modules/mocha/bin/mocha './jscomp/test/**/*_test.js' ",
+    "wtest": "node ./node_modules/mocha/bin/mocha './jscomp/test/**/*_test.js'  -R spec -w",
+    "cover": "node ./node_modules/istanbul/lib/cli.js cover --report html ./node_modules/.bin/_mocha --   jscomp/test/*test.js",
+    "coverage": "`npm bin`/istanbul cover ./node_modules/.bin/_mocha --report lcovonly --  './jscomp/test/**/*_test.js' -R spec",
+    "coveralls": "npm run-script coverage && node ./node_modules/.bin/coveralls < coverage/lcov.info"
   }
 }
