[feature] prepare formal npm release (#355)
* [feature] prepare formal npm release

* [fix] install issues

* tweak makefile

* [snapshot] and add env variables for CI

* ready for publish

* [fix] ignore files from travis ci, no bin for bsc since it requires its existence before post-install

* [done]

* [tweak] use specialized env, replace the shell with js file later

* [tweak]

* [tweak]

--- a/jscomp/Makefile
+++ b/jscomp/Makefile
@@ -128,6 +128,14 @@ travis-world-test:./bin/ocaml_pack
 	@echo "Generating the compiler finished"	
 	make world-test
 
+# no depend on ./bin/ocaml_pack ./bin/bsc
+# since in npm mode, they are generated from a single file
+install:
+	cp ./bin/ocaml_pack ./bin/bsc ../bin/
+	cp ./runtime/*.cmt* ../lib/ocaml/
+	cp ./runtime/*.cmj* ../lib/ocaml/
+	cp ./stdlib/*.cm* ../lib/ocaml/
+
 .PHONY: stdlib
 .PHONY: test  quicktest release snapshot snapshotcmj
 
