[clean] clean up dist (#358)
* [clean] clean up dist

* update depends in test dir and add a dummy bin/bsc for npm

* tweak

* also encode package name in [cmj] files

* [snapshot]

* [fix] Sys.is_directory can throw

* [feature] change resolution rules when compilation unit does not have package specified, while its dependency has

* tweak

--- a/jscomp/test/Makefile
+++ b/jscomp/test/Makefile
@@ -2,13 +2,13 @@ include ../Makefile.shared
 
 CAMLC=../bin/bsc
 
-INCLUDES= -I ../stdlib  -I ../lib -I ../runtime
+INCLUDES= -I ../stdlib  -I ../runtime
 
 SOURCE_LIST := $(shell cat test.mllib)
 TESTS := $(addsuffix .cmj, $(SOURCE_LIST) )
 
 COMPFLAGS+=  $(MODULE_FLAGS) -w -40 
-COMPFLAGS+=  -js-npm-output-path lib/js/test/
+COMPFLAGS+=  -js-npm-output-path $(npm_package_name):lib/js/test/
 
 
 $(TESTS): $(CAMLC)
