--- a/package.json
+++ b/package.json
@@ -33,7 +33,15 @@
         "url": "git+https://github.com/bloomberg/bucklescript.git"
     },
     "bin" : {
-        "bsc" : "./bin/bsc"
+        "bsc" : "./bin/bsc",
+        "ocaml": "./bin/ocaml",
+        "ocamlc":"./bin/ocamlc.opt", 
+        "ocamldep" : "./bin/ocamldep.opt", 
+        "ocamllex" : "./bin/ocamllex.opt",
+        "ocamlobjinfo" : "./bin/ocamlobjinfo",
+        "ocamlopt.opt" : "./bin/ocamlopt",
+        "ocamlrun": "./bin/ocamlrun",
+        "ocamlyacc" : "./bin/ocamlyacc"
     } ,
     "keywords": [
         "ocaml",
