--- a/jscomp/runtime/Makefile
+++ b/jscomp/runtime/Makefile
@@ -21,7 +21,7 @@ $(addsuffix .cmj, $(OTHERS)): caml_builtin_exceptions.cmj  block.cmj js.cmj fn.c
 RUNTIME := $(addsuffix .cmj, $(SOURCE_LIST))
 
 
-COMPFLAGS += $(MODULE_FLAGS) -w -40 -js-npm-output-path $(npm_package_name):lib/js
+COMPFLAGS += $(MODULE_FLAGS) -I ../stdlib -w -40 -js-npm-output-path $(npm_package_name):lib/js -js-no-builtin-ppx-mli
 
 
 
