[Docs] Try Gitbook!
The docs pages reminded me of the
[Gitbook](https://github.com/GitbookIO/gitbook) format, except with the latter, you wouldn't need to maintain anything yourself.

Here's an example of such doc: http://redux.js.org

`npm run watch` is all you need to set up a watcher that live reflects your changes to localhost:4000. `npm run build` to publish into _book, which I put into .gitignore, as I'm not sure how publishing to gh-pages work.

--- a/docs/package.json
+++ b/docs/package.json
@@ -1,10 +1,9 @@
 {
-  "dependencies": {
-    "marked": "^0.3.5"
+  "scripts": {
+    "build": "gitbook install && gitbook build",
+    "watch": "gitbook install && gitbook serve"
   },
   "devDependencies": {
-    "glob": "^7.0.3",
-    "handlebars": "^4.0.5",
-    "marked": "^0.3.5"
+    "gitbook-cli": "^2.1.3"
   }
 }
