make stdlib consistent with ocaml/stdlib add two types 'a js_obj and 'a uncury in pervaisves to walk around the playground issue -- long term goal, investigate how to add new cmi files

--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "devDependencies": {
     "benchmark": "^2.1.0",
+    "colors": "^1.1.2",
     "coveralls": "^2.11.9",
+    "diff": "^2.2.2",
     "glob": "^7.0.3",
     "istanbul": "^0.4.2",
     "karma": "^0.13.9",
