[feature] rename -js-options into -bs-options and add -bs-diagnose

--- a/jscomp/Makefile
+++ b/jscomp/Makefile
@@ -61,9 +61,9 @@ stdlib:
 
 
 # Example:
-# MODULE_FLAGS='-js-module amdjs' make world
-# MODULE_FLAGS='-js-module commonjs' make world
-# MODULE_FLAGS='-js-module goog:buckle' make world
+# MODULE_FLAGS='-bs-module amdjs' make world
+# MODULE_FLAGS='-bs-module commonjs' make world
+# MODULE_FLAGS='-bs-module goog:buckle' make world
 
 world:
 	@echo "Making compiler"		
